tests/type_errors/total_records_to_big.sy
mod A

def f
  : { a : Int } -> Int
  : { b } = b

--+ expected exit status: 7
--+ expected stderr:
--+ > There are extra labels in one record (R).
--+ 
--+ {  b: _  | _  }
--+ ----
--+ {  a: '@ Int'   }
--+ 
--+ tests/type_errors/total_records_to_big.sy
--+   3| def f
--+      ^^^^^

